# C-Cplusplus-Practice

./: README.md
first/: main.c
first_test_review/: CMakeLists.txt
first_test_review/comp12/: CMakeLists.txt  main.cpp
first_test_review/comp12/acceleration/entity/: Acceleration.cpp  Acceleration.h
first_test_review/comp12/mysql/: DbProcess.cpp  DbProcess.h
first_test_review/comp12/utility/random/: RandomGenerator.cpp  RandomGenerator.h
first_test_review/comp12/utility/vector2d/: Vector2d.cpp  Vector2d.h
first_test_review/comp12/velocity/entity/: Velocity.cpp  Velocity.h
first_test_review/comp24/: CMakeLists.txt  main.cpp
first_test_review/comp24/product/entity/: product.c  product.h
first_test_review/comp24/tests/product_entity/: CMakeLists.txt  gtest_main.cpp
first_test_review/comp26/: CMakeLists.txt
first_test_review/comp26/railgun/controller/: RailGunController.cpp  RailGunController.h
first_test_review/comp26/railgun/repository/: RailGunRepository.h  RailGunRepositoryImpl.cpp  RailGunRepositoryImpl.h
first_test_review/comp26/railgun/service/: RailGunService.h  RailGunServiceImpl.cpp  RailGunServiceImpl.h
first_test_review/comp26/uniformAcceleration/repository/: UniformAccelerationRepository.h  UniformAccelerationRepositoryImpl.cpp  UniformAccelerationRepositoryImpl.h
first_test_review/comp26/uniformAcceleration/service/: UniformAccelerationService.h  UniformAccelerationServiceImpl.cpp  UniformAccelerationServiceImpl.h
